--- a/composer.json
+++ b/composer.json
@@ -13,14 +13,13 @@
     }
   ],
   "require": {
-    "php": "^5.6|^7.0",
     "cache/array-adapter": "^0.4.0",
-    "guzzlehttp/guzzle": "~5.3|~6.0",
-    "illuminate/support": "^4.0|^5.0",
-    "nesbot/carbon": "^1.18",
-    "ratchet/pawl": "0.2.*",
-    "react/datagram": "1.1.*",
-    "react/socket-client": "0.5.*",
+    "guzzlehttp/guzzle": "^6.1",
+    "illuminate/support": "^5.3",
+    "nesbot/carbon": "^1.21",
+    "ratchet/pawl": "^0.2.2",
+    "react/datagram": "^1.1",
+    "react/socket-client": "^0.5",
     "symfony/options-resolver": "^2.7|^3.0",
     "TrafficCophp/ByteBuffer": "^0.3",
     "monolog/monolog": "^1.19",
